--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
         <!-- use of card with profiles write-up
         including about me in a row with colum 4 and 8 -->
         <div class="row">
-          <div class="col-lg-4">
+          <div class=" col-lg-4">
            <div class="card" style="width: 400px;">
-             <img class="card-img-top rounded-circle" src="./DSC_0070~2.JPG " width="400%"  alt="my image">
+             <img class="profile card-img-top rounded-circle" src="./DSC_0070~2.JPG " width="50%"  alt="my image" id="profile">
               <div class="card-body">
                 <div class="myDIV">
-                 <a  class="btn btn-dark ">put your cursor here to view</a>
+                 <a  class="btn btn-dark ">click here to view profile namen</a>
               </div>
               <div class="hide">
                 <h4  class="card-title mt-5">Profile<h4>
@@ -106,14 +106,16 @@
           
           <div class="col-lg-8   text-center " id="Background"> 
             <h2 class=" display-1 fs-1 fw-bolder p-5 text-center">___About me</h2>
-            <p class="text-dark fs-3  px-5 display-6 my-2 mx-5"> Am a graduate of federal university of technology Akure, Ondo State, Nigeria. A fashion designer, an entrepreneur and a programmer with good knowledge of front-end techniques. I love structure and order and also stand for quality,very good multitasker, also I like working in a team, you'll learn faster and much more. As the saying goes: 'two heads are better than one.</p>
-          </div>
+            <h3>
+             <p class="text-dark fs-3 "> Am a graduate of federal university of technology Akure, Ondo State, Nigeria. A fashion designer, an entrepreneur and a programmer with good knowledge of front-end techniques. I love structure and order and also stand for quality,very good multitasker, also I like working in a team, you'll learn faster and much more. As the saying goes: 'two heads are better than one.</p>
+          </h3>
+        </div>
         </div>
         <!-- skills with progress-bar with animation -->
         <div class="container mt-5">
           <h2 class=" display-1 fs-1 mb-5 fw-bolder" id="skills">___Skills</h2>
           <div class="row ">
-                  <div class="col-lg-4 bg-info p-3 mb-5 text-white">
+                  <div class="col-lg-4 bg-info text-white">
                     <h4> <p class="text-white fs-2 fw-bolder"> Web designing</h4>
                     <div class="card mt-5" >
                       <img class="card-img-top" src="./developer.jpg
@@ -133,7 +135,7 @@
                     </div>
                   </div>
 
-                  <div class="col-lg-4 bg-warning p-3 mb-5 text-white">
+                  <div class="col-lg-4 bg-warning text-white">
                     <h4> <p class="text-white fs-2 fw-bolder"> Fashion Designing</h4>
                       <div class="card" >
                         <img class="card-img-top" src="./28342764-sewing-tools-at-blue-background-fashion-design-concept.webp" alt="bakare image">
@@ -154,7 +156,7 @@
                         </div>
                       </div>
                   </div>
-                 <div class="col-lg-4 bg-success p-3 mb-5 text-white">
+                 <div class="col-lg-4 bg-success  mb-5 text-white">
                   <h4> <p class="text-white fs-2 fw-bolder"> Among others</h4>
                     <div class="card" >
                       <img class="card-img-top" src="./among others.jpg" alt="bakare image">
@@ -195,6 +197,20 @@
         <h2 class=" display-1 mb-5 fs-1 fw-bolder text-center ">___Education</h2>
           <div class=" fs-5">
             <div class="timeline  text-center">
+              <div class="container left  ">
+                <div class="content">
+                  <h2>presently</h2>
+                  <p>Corp's member
+                    <p>Nigeria youth corp's member</p>
+                </div>
+              </div>
+              <div class="container right  ">
+                <div class="content">
+                  <h2>August 2022</h2>
+                  <p>Computer Programming
+                    <p>ELANHUB</p>
+                </div>
+              </div>
               <div class="container left">
                 <div class="content">
                   <h2>October 2021</h2>
@@ -216,17 +232,10 @@
                   <p>St. Patrick Catholic primary school Ondo state</p>
                 </div>
               </div>
-              <div class="container right  ">
-                <div class="content">
-                  <h2>August 2022</h2>
-                  <p>Computer Programming
-                    <p>ELANHUB</p>
-                </div>
-              </div>
               </div>
               
               <div class=" mt-5 pt- text-dark fw-bold " id="working">
-                  <h2 class="text-center fw-bolder p-5">WORKING EXPERIENCE</h2>
+                  <h2 class="text-center fw-bolder">WORKING EXPERIENCE</h2>
                   <div class="row">
                     <div class="col-sm-6 bg-dark text-center">
                       <img src="./glo resize.jpg" alt="glo">
@@ -243,7 +252,7 @@
                   <div class="row mt-5">
                     <div class="row">
                       <div class="col-sm-6 bg-dark text-center">
-                        <img src="./recharge card.jpg" alt="recharge card">
+                        <img src="./office assistant.jpg" alt="recharge card">
                       </div>
                     <div class="col-sm-4">
                       <h3 class="fs-2 display-6">Dumsod venture				           
@@ -256,15 +265,15 @@
                   </div>
                   <div class="row mt-5">
                     <div class="col-sm-6 bg-dark text-center">
-                      <img src="./office assistant.jpg" alt="recharge card">
+                      <img src="./recharge card.jpg" alt="recharge card">
                     </div>
                     <div class="col-sm-4">
-                      <h3 class="fs-2 display-6">Recharge card sales office. 
+                      <h3 class="fs-2 display-6 ">Recharge card sales office. 
                         <p>Sales representative </p>      
                       </h3>
                     </div>
                     <div class="col-sm-2">
-                      <h3 class="fs-2 display-6">Sept. 2011 – Jan 2012</h3>
+                      <h3 class="fs-2 display-6 text-center">Sept. 2011 – Jan 2012</h3>
                     </div>
                   </div>
                   <div class="row mt-5">
@@ -273,12 +282,12 @@
                       <img src="./ash glad.png" alt="recharge card">
                     </div>
                     <div class="col-sm-4 mb-5">
-                      <h3 class="fs-2 display-6 mt-3">Aspayastudenthub community outreach		
+                      <h3 class="fs-2 display-6 text-center mt-3">Aspaya studenthub community outreach		
                         Facilitator assistance
                       </h3>
                     </div>
                     <div class="col-sm-2">
-                      <h3 class="fs-2 display-6 mt-3">March 2021</h3>
+                      <h3 class="fs-2 display-6 text-center mt-3">March 2021</h3>
                     </div>
                   </div>
                 </div>
@@ -296,12 +305,12 @@
         <div class="container-fluid col-sm-10 bg-light">
             <form action="/action_page.php">
                 <div class="mb-3 mt-3">
-                    <label for="email" class="form-label">Email</label>
-                    <input type="email" class="form-control form-control" id="email" placeholder="Email here" name="email">
+                    <label for="email" class="form-label">Name</label>
+                    <input type="email" class="form-control form-control" id="email" placeholder="Your Name" name="email">
                 </div>
                 <div class="mb-3">
-                    <label for="pwd" class="form-label">Password</label>
-                    <input type="password" class="form-control " id="pwd" placeholder="Enter password" name="pswd">
+                    <label for="pwd" class="form-label">Your email</label>
+                    <input type="password" class="form-control " id="pwd" placeholder="Your email address" name="pswd">
                 </div>
                 <div class="form-check mb-3">
                     <label class="form-check-label">
