--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
              <img class="profile card-img-top rounded-circle" src="./DSC_0070~2.JPG " width="50%"  alt="my image" id="profile">
               <div class="card-body">
                 <div class="myDIV">
-                 <a  class="btn btn-dark ">click here to view profile namen</a>
+                 <a  class="btn btn-dark ">click here to view profile name</a>
               </div>
               <div class="hide">
                 <h4  class="card-title mt-5">Profile<h4>
                 <p class="card-text ">Last name: Bakare </p>
-                <p>First name: Sidikat</p>
-                <p>Middle name: Oyindamola</p>
-                <p>Maiden-name: Abdul-Lateef</p>
+                <h4>First name: Sidikat</h4>
+                <h4>Middle name: Oyindamola</h4>
+                <h4>Maiden-name: Abdul-Lateef</h4>
               </div>
               </div>
              </div>
@@ -112,7 +112,7 @@
         </div>
         </div>
         <!-- skills with progress-bar with animation -->
-        <div class="container mt-5">
+        <div class="container mb-5  mt-5">
           <h2 class=" display-1 fs-1 mb-5 fw-bolder" id="skills">___Skills</h2>
           <div class="row ">
                   <div class="col-lg-4 bg-info text-white">
@@ -123,16 +123,27 @@
                       <div class="card-body">
                         <h4 class="card-title">sample</h4>
                       </div>
+                      <h5 class="text-primary">Css</h5>
                       <div class="progress bar mt-2">
-                        <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:70%" >css 70%</div>
+                        <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:70%" > 70%</div>
                      </div>
+                     <h5 class="text-primary">Html</h5>
                      <div class="progress bar mt-2">
-                       <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:80%" >Html 80%</div>
+                       <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:80%" > 80%</div>
                      </div>
+                     <h5 class="text-primary">bootstrap</h5>
                      <div class="progress bar mt-2">
-                       <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:90%" >bootstrap 90%</div>
+                       <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:90%" > 90%</div>
                      </div>
                     </div>
+                    <h5 class="text-primary">Microsoft word</h5>
+                    <div class="progress bar mt-2">
+                      <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:70%" > 85%</div>
+                   </div>
+                   <h5 class="text-primary">Microsoft excel</h5>
+                   <div class="progress bar mt-2">
+                    <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:70%" > 70%</div>
+                 </div>
                   </div>
 
                   <div class="col-lg-4 bg-warning text-white">
@@ -142,44 +153,55 @@
                         <div class="card-body">
                           <h4 class="card-title">Web Design</h4>
                         </div>
+                        <h5 class="text-primary">Fabric quality</h5>
                         <div class="progress bar mt-2">
-                          <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:80%" >Fabric quality 80%</div>
+                          <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:80%" > 80%</div>
                         </div>
+                        <h5 class="text-primary">sewing</h5>
                         <div class="progress bar mt-2">
-                          <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:95%" >sewing 95%</div>
+                          <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:95%" > 95%</div>
                         </div>
+                        <h5 class="text-primary">Laying &cutting</h5>
                         <div class="progress bar mt-2">
-                          <div class="progress-bar text-white text-center fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:90%" >Laying &cutting 90%</div>
+                          <div class="progress-bar text-white text-center fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:90%" > 90%</div>
                         </div>
+                        <h5 class="text-primary">Designing</h5>
                         <div class="progress bar mt-2">
-                          <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:90%" >Designing 90%</div>
+                          <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:90%" > 90%</div>
                         </div>
                       </div>
                   </div>
-                 <div class="col-lg-4 bg-success  mb-5 text-white">
+                 <div class="col-lg-4 bg-success   text-white">
                   <h4> <p class="text-white fs-2 fw-bolder"> Among others</h4>
                     <div class="card" >
                       <img class="card-img-top" src="./among others.jpg" alt="bakare image">
                       <div class="card-body">
                         <h4 class="card-title"></h4>
                       </div>
+                      <h5 class="text-primary">Ecotourism Management</h5>
                       <div class="progress bar mt-2">
-                        <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:80%"> Ecotourism management 80%</div>
+                        <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:80%">  80%</div>
                       </div>
+                      <h5 class="text-primary">critical thinking</h5>
                       <div class="progress bar mt-2">
-                        <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:95%" >critical thinking 95%</div>
+                        <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:95%" > 95%</div>
                       </div>
+                      <h5 class="text-primary">multitasking</h5>
                       <div class="progress bar mt-2">
-                        <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:95%" >multitasking 95%</div>
+                        <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:95%" >95%</div>
                       </div>
+                      <h5 class="text-primary">leadership</h5>
                       <div class="progress bar mt-2">
-                        <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:95%" >leadership 95%</div>
+                        <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:95%" > 95%</div>
                       </div>
+                      
+                      <h5 class="text-primary">Passionate</h5>
                       <div class="progress bar mt-2">
-                        <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:95%" >Passionate 95%</div>
+                        <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:95%" > 95%</div>
                       </div>
+                      <h5 class="text-primary">Care giver </h5>
                       <div class="progress bar mt-2">
-                        <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:95%" >Care giver 95%</div>
+                        <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:95%" >95%</div>
                       </div>
                       </div>
                     </div>
