--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
              </div>
            </div>
           
-          <div class="col-lg-8   text-center " id="Background"> 
+          <div class="col-lg-8 "    id="Background"> 
             <h2 class=" display-1 fs-1 fw-bolder p-5 text-center">___About me</h2>
             <h3>
              <p class="text-dark fs-3 "> Am a graduate of federal university of technology Akure, Ondo State, Nigeria. A fashion designer, an entrepreneur and a programmer with good knowledge of front-end techniques. I love structure and order and also stand for quality,very good multitasker, also I like working in a team, you'll learn faster and much more. As the saying goes: 'two heads are better than one.</p>
@@ -114,38 +114,36 @@
         <!-- skills with progress-bar with animation -->
         <div class="container mb-5  mt-5">
           <h2 class=" display-1 fs-1 mb-5 fw-bolder" id="skills">___Skills</h2>
-          <div class="row ">
-                  <div class="col-lg-4 bg-info text-white">
-                    <h4> <p class="text-white fs-2 fw-bolder"> Web designing</h4>
-                    <div class="card mt-5" >
-                      <img class="card-img-top" src="./developer.jpg
-                      " alt="bakare image">
-                      <div class="card-body">
-                        <h4 class="card-title">sample</h4>
-                      </div>
-                      <h5 class="text-primary">Css</h5>
-                      <div class="progress bar mt-2">
-                        <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:70%" > 70%</div>
-                     </div>
-                     <h5 class="text-primary">Html</h5>
-                     <div class="progress bar mt-2">
-                       <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:80%" > 80%</div>
-                     </div>
-                     <h5 class="text-primary">bootstrap</h5>
-                     <div class="progress bar mt-2">
-                       <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:90%" > 90%</div>
-                     </div>
-                    </div>
-                    <h5 class="text-primary">Microsoft word</h5>
-                    <div class="progress bar mt-2">
-                      <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:70%" > 85%</div>
-                   </div>
-                   <h5 class="text-primary">Microsoft excel</h5>
-                   <div class="progress bar mt-2">
-                    <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:70%" > 70%</div>
-                 </div>
+          <div class="row "> 
+            <div class="col-lg-4 bg-info text-white">
+              <h4> <p class="text-white fs-2 fw-bolder"> Web Designing</h4>
+                <div class="card" >
+                  <img class="card-img-top" src="./developer.jpg" alt="bakare image">
+                  <div class="card-body">
+                    <h4 class="card-title">Web Design</h4>
                   </div>
-
+                  <h5 class="text-primary">Css</h5>
+                  <div class="progress bar mt-2">
+                    <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:80%" > 80%</div>
+                  </div>
+                  <h5 class="text-primary">Html</h5>
+                  <div class="progress bar mt-2">
+                    <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:95%" > 95%</div>
+                  </div>
+                  <h5 class="text-primary">bootstrap</h5>
+                  <div class="progress bar mt-2">
+                    <div class="progress-bar text-white text-center fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:90%" > 90%</div>
+                  </div>
+                  <h5 class="text-primary">Microsoft word</h5>
+                  <div class="progress bar mt-2">
+                    <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:90%" > 90%</div>
+                  </div>
+                  <h5 class="text-primary">Microsoft word</h5>
+                  <div class="progress bar mt-2">
+                    <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:90%" > 90%</div>
+                  </div>
+                </div>
+            </div>
                   <div class="col-lg-4 bg-warning text-white">
                     <h4> <p class="text-white fs-2 fw-bolder"> Fashion Designing</h4>
                       <div class="card" >
