--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
                   <div class="progress bar mt-2">
                     <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:90%" > 90%</div>
                   </div>
-                  <h5 class="text-primary">Microsoft word</h5>
-                  <div class="progress bar mt-2">
+                  <h5 class="text-primary">Microsoft excel</h5>
+                  <div class="progress bar mt-2 mb-2">
                     <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:90%" > 90%</div>
                   </div>
                 </div>
@@ -164,7 +164,7 @@
                           <div class="progress-bar text-white text-center fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:90%" > 90%</div>
                         </div>
                         <h5 class="text-primary">Designing</h5>
-                        <div class="progress bar mt-2">
+                        <div class="progress bar mt-2 mb-2">
                           <div class="progress-bar text-white  fs-6 fw-bold bg-dark progress-bar-animated progress-bar-striped" style="width:90%" > 90%</div>
                         </div>
                       </div>
